--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "1.0.0",
   "description": "Gives you a stack trace. Optionally returns only the trace at a certain depth in the stack.",
   "main": "index.js",
-  "scripts": {
-    "test": "node test/"
-  },
   "author": "jehan.tremback@gmail.com",
-  "license": "MIT",
-  "dependencies": {}
+  "license": "MIT"
 }
